--- a/src/blocks/modules/main__content/main__content.scss
+++ b/src/blocks/modules/main__content/main__content.scss
@@ -123,6 +123,7 @@
             "category products";
         grid-gap: 30px;
         grid-template-columns: 290px 3fr;
+        grid-template-rows: 0fr 1fr;
         &--left {
             grid-area: category;
             border: 1px solid $grey_border-color;
@@ -176,15 +177,16 @@
                     height: 20px;
                     z-index: 1;
                     cursor: pointer;
-                    font-size: 28px;
+                    font-size: 20px;
                     line-height: 0;
                 }
                 &::after {
                     padding-left: 3px;
-                    top: 24px;
+                    top: 22px;
                 }
                 &::before {
-                    top: 30px;
+                    top: 26px;
+                    right: 5px;
                     transform: rotate(90deg);
                     @include transition;
                 }
@@ -205,7 +207,6 @@
         }
         &--slider {
             grid-area: slider;
-            margin-top: 28px;
             max-width: 875px;
             width: 100%;
             & > p {
@@ -215,9 +216,15 @@
                 padding-left: 20px;
                 text-transform: uppercase;
             }
+            .product__items {
+                margin-bottom: 0 !important;
+            }
         }
         &--products {
             grid-area: products;
         }
+    }
+    &__other-page {
+        margin: 30px 0;
     }
 }
