--- a/src/blocks/modules/pages/cart.scss
+++ b/src/blocks/modules/pages/cart.scss
@@ -1,27 +1,32 @@
 @import "main-bx";
 
-.cart_totals {
-    h2 {
-        background-color: transparent;
-        font-size: 2rem;
-        color: $grey-color;
-        padding: 0;
-        margin: 0;
-    }
-}
-.coupon {
+.coupon,
+.checkout_coupon {
     @include flex;
-    input {
+    align-items: center;
+    float: left !important;
+    width: 100%;
+    max-width: 500px;
+    input.input-text {
         width: 100% !important;
-        max-width: 180px !important;
+        max-width: 200px !important;
         margin: 0 20px 0 0 !important;
-        height: 35px !important;
+        height: 45px !important;
+        border-radius: 0 !important;
+        border: 1px solid $grey_border-color !important;
+        padding-left: 20px !important;
     }
-    button {
-        background-color: $blue-color !important;
+    button.button {
+        background-color: $orange-color !important;
         color: $white-color !important;
         height: 35px !important;
+        padding: 0 !important;
+        color: $white-color !important;
+        height: 45px !important;
+        max-width: 200px;
+        width: 100%;
         @include transition;
+        border-radius: 0 !important;
         &:hover {
             background-color: $blue_hover-color;
             color: $white-color;
@@ -40,13 +45,31 @@
 }
 
 .checkout_coupon {
-    input {
-        height: 35px !important;
+    max-width: 100% !important;
+    margin: 0 0 30px !important;
+    border-radius: 0 !important;
+    .form-row.form-row-first {
+        width: 100%;
+        max-width: 250px;
     }
-    button {
-        background-color: $blue-color !important;
+    p {
+        font-size: 16px;
+        width: 100%;
+        margin-bottom: 15px;
+    }
+}
+
+.woocommerce table.cart td.actions {
+    & > button.button {
+        background-color: $orange-color !important;
         color: $white-color !important;
         height: 35px !important;
+        padding: 0 !important;
+        color: $white-color !important;
+        height: 45px !important;
+        max-width: 200px;
+        width: 100%;
+        border-radius: 0 !important;
         @include transition;
         &:hover {
             background-color: $blue_hover-color;
@@ -54,12 +77,18 @@
         }
     }
 }
+
 .checkout-button,
 .place-order button {
-    background-color: $blue-color !important;
+    background-color: $orange-color !important;
+    border: 1px solid $orange-color !important;
+    color: $white-color !important;
     @include transition;
+    margin-top: 20px !important;
+    border-radius: 0 !important;
     &:hover {
-        background-color: $blue_hover-color !important;
+        background-color: $white-color !important;
+        color: $orange-color !important;
     }
     @include to($mobile) {
         width: 100%;
@@ -71,9 +100,61 @@
     img {
         max-width: 320px;
     }
+    .woocommerce-Price-amount {
+        color: $orange-color;
+        font-size: 24px;
+        font-family: $font-bold;
+    }
 }
 .woocommerce-checkout {
     .shop_table {
         background-color: transparent !important;
     }
+}
+
+.wgm-tax {
+    color: $dark_red_color;
+    font-size: 16px;
+    .woocommerce-Price-amount {
+        color: $dark_red_color;
+        font-size: 16px;
+    }
+}
+.jde_hint {
+    a {
+        color: $orange-color;
+        font-family: $font-bold;
+    }
+}
+.woocommerce table.shop_table {
+    border-radius: none !important;
+}
+.woocommerce ul#shipping_method li {
+    display: flex;
+    align-items: center;
+    label {
+        cursor: pointer;
+    }
+}
+.woocommerce form {
+    .form-row-last,
+    .form-row-first {
+        width: 100%;
+    }
+}
+form.checkout {
+    h3 {
+        text-transform: uppercase;
+        margin-bottom: 30px;
+    }
+}
+#customer_details {
+    margin-bottom: 30px;
+}
+.woocommerce-MyAccount-navigation {
+    margin-bottom: 30px;
+}
+.show-password-input {
+    top: 5px !important;
+    right: 5px !important;
 }
