--- a/src/blocks/modules/pages/shop.scss
+++ b/src/blocks/modules/pages/shop.scss
@@ -1,6 +1,12 @@
 @import "main-bx";
 .main {
     padding-bottom: 50px;
+    margin-bottom: 50px;
+    h1,
+    h2 {
+        text-transform: uppercase;
+        margin: 20px 0;
+    }
     a {
         color: $black-color;
     }
@@ -51,14 +57,16 @@
             "sidebar slider"
             "sidebar sort"
             "sidebar products";
-        grid-gap: 0 30px;
+        grid-gap: 30px;
         grid-template-columns: 290px 3fr;
+        grid-template-rows: 0fr 48px 1fr;
+        &--slider {
+            grid-area: slider;
+        }
         &-top {
-            margin-bottom: 30px;
-            margin-top: 28px;
+            margin-top: 15px;
             max-width: 875px;
             width: 100%;
-            grid-area: slider;
             & > p {
                 font-family: $font-bold;
                 display: inline-block;
@@ -66,17 +74,56 @@
                 padding-left: 20px;
                 text-transform: uppercase;
             }
+            .product__items {
+                margin-bottom: 0 !important;
+            }
         }
     }
 
     &__bottom {
-        &-description {
+        &-top {
             display: grid;
             grid-template-columns: repeat(2, 1fr);
             gap: 40px;
             margin-bottom: 50px;
+            h2 {
+                grid-column: 1/3;
+            }
             p {
                 line-height: 1.75;
+            }
+        }
+        h1,
+        h2 {
+            padding-top: 30px;
+            padding-bottom: 30px;
+            position: relative;
+            font-size: 43px;
+            line-height: 1.2;
+            font-family: $font-bold;
+            max-width: 845px;
+            width: 100%;
+            text-align: center;
+            margin: 45px auto;
+            text-transform: uppercase;
+            span {
+                color: $orange-color;
+            }
+            &::after,
+            &::before {
+                content: "";
+                position: absolute;
+                left: 50%;
+                transform: translateX(-50%);
+                background-color: $orange-color;
+                width: 83px;
+                height: 3px;
+            }
+            &::before {
+                top: 0;
+            }
+            &::after {
+                bottom: 0;
             }
         }
         &-about {
@@ -186,6 +233,10 @@
         display: grid;
         grid-template-columns: 1fr 1fr 1fr;
         grid-gap: 30px 0;
+        margin-bottom: 30px;
+        .added_to_cart {
+            display: none !important;
+        }
         @include to($mobile) {
             grid-template-columns: 1fr 1fr;
         }
@@ -206,6 +257,13 @@
                 &:before {
                     content: none;
                 }
+                &:hover {
+                    svg {
+                        path {
+                            fill: $orange-color;
+                        }
+                    }
+                }
             }
             .slick-prev {
                 right: 80px;
@@ -213,8 +271,8 @@
         }
     }
     .woof_sid_auto_shortcode {
-        border: 1px solid $grey_border-color;
-        padding: 28px !important;
+        border: none;
+        padding: 0 !important;
         grid-area: sidebar;
         width: 100%;
         height: fit-content;
@@ -240,6 +298,7 @@
         margin-bottom: 19px;
         border-bottom: 1px solid $grey_border-color;
         @include transition;
+        position: relative;
         img {
             width: 100%;
             display: block;
@@ -346,7 +405,7 @@
         width: 43px;
         height: 50px;
         text-align: center;
-        display: block !important;
+        display: block;
         position: relative !important;
         @include transition;
         margin: 0 0 0 auto !important;
@@ -370,7 +429,7 @@
             width: 43px;
             height: 50px;
             text-align: center;
-            display: block !important;
+            display: block;
             position: relative !important;
             @include transition;
             margin: 0 !important;
@@ -391,14 +450,12 @@
                     }
                 }
             }
+            &::after {
+                content: none !important;
+            }
         }
     }
-    &:hover {
-        .tinv-wraper.tinv-wishlist {
-            opacity: 1;
-            visibility: visible;
-        }
-    }
+
     // wishlist
     .tinv-wraper.tinv-wishlist {
         position: absolute;
@@ -409,7 +466,6 @@
         @include transition;
         background-color: rgba(255, 255, 255, 0.308);
         opacity: 0;
-        visibility: hidden;
         z-index: 1;
         .tinvwl_add_to_wishlist_button {
             display: block;
@@ -420,6 +476,9 @@
             padding: 12px 0;
             margin: 5em auto 0 !important;
             text-align: center;
+        }
+        &:hover {
+            opacity: 1;
         }
     }
 }
@@ -460,9 +519,7 @@
     }
 }
 // woof-filter
-.woof_checkbox_term {
-    max-width: 10px;
-}
+
 .woof_reset_search_form {
     color: $orange-color;
     background-color: transparent;
@@ -470,6 +527,12 @@
     padding: 7px;
     cursor: pointer;
     width: 100%;
+    @include transition;
+    text-transform: uppercase;
+    &:hover {
+        background-color: $orange-color;
+        color: $white-color;
+    }
 }
 .woof_checkbox_featured_container {
     position: relative;
@@ -494,6 +557,9 @@
     }
 }
 .woof_container {
+    border: 1px solid $grey_border-color;
+    padding: 28px !important;
+    margin-bottom: 30px !important;
     &_inner {
         position: relative;
         padding-left: 0 !important;
@@ -501,7 +567,24 @@
     width: 100% !important;
     h4 {
         display: inline-block;
-        margin-bottom: 5px;
+        margin-bottom: 18px;
+        text-transform: uppercase;
+        width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        a {
+            font-size: 20px;
+            line-height: 0;
+            width: 20px;
+            text-align: center;
+        }
+    }
+    label {
+        display: flex !important;
+        align-items: center;
+        justify-content: space-between;
+        width: 100%;
     }
 }
 .woof_block_html_items ul {
@@ -510,16 +593,179 @@
 .woof_list li {
     position: relative;
     padding: 0 !important;
-    font-size: 18px;
+    font-size: 16px;
     margin: 0 !important;
+    display: flex;
+    align-items: center;
+}
+.woof_checkbox_term {
+    position: absolute;
+    left: -100%;
+    visibility: hidden;
+    opacity: 0;
+    &:checked + label {
+        &::before {
+            content: "";
+            width: 16px;
+            height: 1px;
+            background-color: $orange-color;
+            transform: rotate(-45deg);
+            position: absolute;
+            left: -18px;
+            top: 13px;
+        }
+    }
+    &:disabled + label {
+        cursor: not-allowed;
+    }
 }
 .woof_checkbox_label {
-    font-size: 18px !important;
+    position: relative;
+    padding-left: 10px;
+    &::after {
+        content: "";
+        width: 19px;
+        height: 19px;
+        border: 1px solid #9c9c9c;
+        background-color: transparent;
+        position: absolute;
+        left: -19px;
+    }
 }
 .woof_submit_search_form_container {
     margin-bottom: 0;
     button {
         border: 1px solid $grey_border-color;
+    }
+}
+.woof_price_search_container {
+    .price_slider_amount {
+        .price_label {
+            position: relative;
+            display: flex;
+            justify-content: space-between;
+            padding-top: 30px;
+            width: 100%;
+            &::before {
+                position: absolute;
+                // content: "";
+                width: 44px;
+                height: 100%;
+                background-color: white;
+                left: 0;
+                top: 0;
+            }
+            .from,
+            .to {
+                text-align: center;
+                display: inline-block;
+                position: relative;
+                border: 1px solid $grey_border-color;
+                width: 70px;
+                height: 40px;
+                &::after {
+                    position: absolute;
+                    font-size: 18px;
+                    font-family: $font-light;
+                    display: inline-block;
+                    left: 0;
+                    top: -36px;
+                }
+            }
+            .from {
+                &::after {
+                    content: "Von";
+                }
+            }
+            .to {
+                &::after {
+                    content: "Bis";
+                }
+            }
+        }
+    }
+}
+.woof {
+    .widget_price_filter {
+        .ui-slider {
+            .ui-slider-handle {
+                background-color: $orange-color !important;
+                border-radius: 0 !important;
+                height: 12px !important;
+                width: 12px !important;
+                border: none !important;
+            }
+            .ui-slider-range {
+                background-color: $orange-color !important;
+                border-radius: 0 !important;
+                font-size: 0.7em;
+                position: absolute;
+                z-index: 1;
+            }
+        }
+        .ui-slider-horizontal {
+            height: 1px !important;
+            background-color: $grey-color !important;
+        }
+    }
+}
+.woof_childs_list {
+    margin: 0px 0 0 15px !important;
+}
+.woof_container_product_cat {
+    .woof_checkbox_term {
+        display: none !important;
+    }
+    .woof_list li {
+        display: inherit;
+        font-size: 18px;
+        border-bottom: 1px solid #ebe9e0;
+        padding: 10px 0 !important;
+        &:last-child {
+            border-bottom: none !important;
+        }
+        .woof_checkbox_label {
+            padding-left: 0 !important;
+        }
+        ul li {
+            border-bottom: none !important;
+            padding: 0 !important;
+        }
+    }
+    .woof_checkbox_label {
+        &::after,
+        &::before {
+            content: none !important;
+        }
+    }
+}
+.woof_container_pa_farbe {
+    .woof_checkbox_label {
+        padding-left: 0 !important;
+        text-align: center;
+        &::after {
+            width: 35px;
+            height: 35px;
+            left: 50%;
+            transform: translate(-50%, 0px);
+            top: -35px;
+        }
+        &::before {
+            left: 50% !important;
+            transform: translate(-50%, 0px) rotate(-45deg) !important;
+            top: -18px !important;
+            width: 35px !important;
+        }
+    }
+    .woof_block_html_items {
+        padding-top: 40px;
+    }
+    .woof_block_html_items ul {
+        display: flex;
+        justify-content: space-between;
+    }
+    .woof_checkbox_count {
+        display: none !important;
     }
 }
 // pagination
