--- a/src/blocks/modules/main__content/main__content.scss
+++ b/src/blocks/modules/main__content/main__content.scss
@@ -59,7 +59,13 @@
 }
 .main {
     &__slider {
-        margin-bottom: 100px !important;
+        margin-bottom: 100px;
+        @include to($mobile) {
+            margin-top: 20px;
+            display: flex;
+            flex-direction: column-reverse;
+            margin-bottom: 0;
+        }
         &-item {
             position: relative;
             &--top {
@@ -72,12 +78,25 @@
                 z-index: 1;
                 width: 100%;
                 max-width: 460px;
+                @include to($mobile) {
+                    max-width: 230px;
+                    left: unset;
+                    right: 0;
+                    padding: 8px 18px;
+                }
                 p {
                     font-size: 30px;
                     font-family: $font-bold;
                     &:last-child {
                         font-size: 47px;
                         font-family: $font-normal;
+                    }
+                    @include to($mobile) {
+                        font-size: 14px;
+                        line-height: 1.2;
+                        &:last-child {
+                            font-size: 23px;
+                        }
                     }
                 }
             }
@@ -90,13 +109,29 @@
                 padding: 17px 22px;
                 width: 100%;
                 max-width: 475px;
+                @include to($mobile) {
+                    padding: 8px 18px;
+                    left: 50%;
+                    transform: translateX(-50%);
+                    max-width: 90%;
+                    p {
+                        font-size: 14px;
+                        line-height: 1.2;
+                    }
+                }
             }
         }
         .slick-slide {
             padding: 30px 0;
+            img {
+                width: 100%;
+            }
         }
         .slick-dots {
             bottom: -50px;
+            @include to($mobile) {
+                bottom: -30px;
+            }
             li {
                 button {
                     &::before {
@@ -124,6 +159,14 @@
         grid-gap: 30px;
         grid-template-columns: 290px 3fr;
         grid-template-rows: 0fr 1fr;
+        @include to($mobile) {
+            grid-template-areas:
+                "slider"
+                "products";
+            grid-gap: 0px;
+            grid-template-columns: 1fr;
+            grid-template-rows: 1fr;
+        }
         &--left {
             grid-area: category;
             border: 1px solid $grey_border-color;
@@ -131,6 +174,9 @@
             padding: 28px;
             margin-bottom: 30px;
             height: fit-content;
+            @include to($mobile) {
+                display: none;
+            }
             .head {
                 font-family: $font-bold;
                 margin-bottom: 30px;
@@ -209,12 +255,23 @@
             grid-area: slider;
             max-width: 875px;
             width: 100%;
+            @include to($mobile) {
+                max-width: 100vw;
+                margin-bottom: 30px;
+            }
             & > p {
                 font-family: $font-bold;
                 display: inline-block;
                 margin-bottom: 22px;
                 padding-left: 20px;
                 text-transform: uppercase;
+                @include to($mobile) {
+                    text-align: center;
+                    width: 100%;
+                    padding-left: 0;
+                    margin-bottom: 50px;
+                    font-size: 20px;
+                }
             }
             .product__items {
                 margin-bottom: 0 !important;
