--- a/src/blocks/modules/pages/shop.scss
+++ b/src/blocks/modules/pages/shop.scss
@@ -6,6 +6,9 @@
     h2 {
         text-transform: uppercase;
         margin: 20px 0;
+        @include to($mobile) {
+            font-size: 26px;
+        }
     }
     a {
         color: $black-color;
@@ -26,6 +29,12 @@
             text-align: center;
             margin: 45px auto;
             text-transform: uppercase;
+            @include to($mobile) {
+                font-size: 26px;
+                padding-top: 25px;
+                padding-bottom: 25px;
+                margin: 25px 0;
+            }
             span {
                 color: $orange-color;
             }
@@ -49,6 +58,9 @@
         p {
             text-align: center;
             line-height: 35px;
+            @include to($mobile) {
+                line-height: 1.4;
+            }
         }
     }
     &__content {
@@ -81,11 +93,24 @@
     }
 
     &__bottom {
+        @include to($mobile) {
+            margin-bottom: 150px;
+        }
         &-top {
             display: grid;
             grid-template-columns: repeat(2, 1fr);
             gap: 40px;
             margin-bottom: 50px;
+            @include to($mobile) {
+                grid-template-columns: 1fr;
+                gap: 20px;
+                h2 {
+                    grid-column: unset;
+                }
+                p {
+                    line-height: 1.4;
+                }
+            }
             h2 {
                 grid-column: 1/3;
             }
@@ -106,6 +131,12 @@
             text-align: center;
             margin: 45px auto;
             text-transform: uppercase;
+            @include to($mobile) {
+                font-size: 26px;
+                padding-top: 25px;
+                padding-bottom: 25px;
+                margin: 25px 0;
+            }
             span {
                 color: $orange-color;
             }
@@ -131,12 +162,16 @@
             width: 100%;
             ul {
                 display: flex;
+                flex-wrap: wrap;
                 justify-content: space-between;
             }
             li {
                 display: flex;
                 align-items: center;
-
+                @include to($mobile) {
+                    width: 49%;
+                    margin-bottom: 15px;
+                }
                 span {
                     display: inline-block;
                     &.text {
@@ -144,6 +179,10 @@
                         margin-left: 20px;
                         width: 100%;
                         max-width: 135px;
+                        @include to($mobile) {
+                            margin-left: 15px;
+                            font-size: 14px;
+                        }
                     }
                 }
             }
@@ -154,6 +193,8 @@
             position: relative;
             @include to($mobile) {
                 flex-wrap: wrap;
+                width: calc(100% + 20px);
+                left: -10px;
             }
             &::before {
                 content: "";
@@ -189,6 +230,14 @@
                 color: $white-color;
                 padding: 32px 45px;
                 position: relative;
+                @include to($mobile) {
+                    padding: 24px 10px;
+                    text-align: center;
+                    h3 {
+                        font-size: 25px;
+                        margin-bottom: 5px;
+                    }
+                }
                 h3 {
                     font-size: 30px;
                     line-height: 1;
@@ -210,7 +259,8 @@
                     padding: 16px 25px;
                     border: 2px solid $orange-color;
                     @include to($mobile) {
-                        bottom: -85px;
+                        bottom: -60px;
+                        left: -10px;
                     }
                     svg {
                         margin-left: 25px;
@@ -246,7 +296,8 @@
             .slick-slide {
                 padding: 0 12.725px;
                 @include to($mobile) {
-                    padding: 0 5px;
+                    padding: 0 5px 0 0;
+                    margin-right: 5px;
                 }
             }
             .slick-prev,
@@ -267,6 +318,19 @@
             }
             .slick-prev {
                 right: 80px;
+            }
+            @include to($mobile) {
+                .slick-prev,
+                .slick-next {
+                    top: -40px;
+                    right: unset;
+                    left: 37%;
+                    transform: translateX(-50%);
+                }
+                .slick-next {
+                    left: 55%;
+                    transform: translateX(-45%);
+                }
             }
         }
     }
@@ -292,6 +356,10 @@
     position: relative;
     @include to($mobile) {
         max-width: 165px;
+        padding-left: 0;
+        padding-right: 0;
+        margin-right: 10px !important;
+        margin-left: 0 !important;
     }
     &-img {
         position: relative;
@@ -327,6 +395,14 @@
         height: 50px;
         overflow: hidden;
         @include transition;
+        @include to($mobile) {
+            height: auto;
+            padding: 0 15px;
+            h3 {
+                font-size: 16px;
+                line-height: 1.2;
+            }
+        }
         &:hover {
             color: $orange-color;
         }
@@ -339,6 +415,11 @@
         font-size: 16px;
         color: #9d9d9d;
         margin-bottom: 30px;
+        @include to($mobile) {
+            padding: 0 15px;
+            margin-bottom: 15px;
+            font-size: 12px;
+        }
     }
     &-price {
         padding: 0 15px;
@@ -349,6 +430,10 @@
         color: $orange-color;
         font-family: $font-bold;
         position: relative;
+        @include to($mobile) {
+            padding: 0 10px;
+            font-size: 16px;
+        }
         span {
             display: inline-block;
             white-space: nowrap;
@@ -385,6 +470,9 @@
             font-size: 10px;
             color: $dark_red-color;
             font-family: $font-normal;
+            @include to($mobile) {
+                left: 10px;
+            }
         }
         .woocommerce_de_versandkosten {
             position: absolute;
@@ -393,6 +481,9 @@
             font-size: 10px;
             color: $dark_red-color;
             font-family: $font-normal;
+            @include to($mobile) {
+                right: 10px;
+            }
             a {
                 color: $dark_red-color;
                 font-family: $font-normal;
