--- a/src/styles/base/_general.scss
+++ b/src/styles/base/_general.scss
@@ -19,6 +19,10 @@ body {
     &.overflow {
         overflow: hidden;
     }
+    @include to($mobile) {
+        font-size: 18px;
+        line-height: 1.4;
+    }
 }
 .container {
     width: 100%;
@@ -26,10 +30,20 @@ body {
     margin: 0 auto;
     padding: 0 20px;
     @include to($mobile) {
-        padding: 0;
+        padding: 0 10px;
     }
 }
-
+.mobile__visible {
+    display: none;
+    @include to($mobile) {
+        display: block;
+    }
+}
+.mobile__hide {
+    @include to($mobile) {
+        display: none;
+    }
+}
 ul {
     list-style-type: none;
     li {
